--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h3>Dummy Text</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia repellendus vitae laudantium cupiditate placeat vel in consequatur impedit nemo quam ipsa magnam corporis ducimus eveniet suscipit, nam maxime esse exercitationem.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure atque quam qui facilis ipsum consequuntur modi placeat deleniti voluptatibus deserunt. Tenetur doloremque perspiciatis sint consectetur labore quidem veritatis aliquid consequatur?</p>
 </body>
 </html>
